# libpaxos-cpp

./: .gitignore  COPYING  Makefile.am  README  README.md  README.rst  autogen.sh  config.h.in  configure.ac  index.html  params.json  paxos-cpp.pc.in
contrib/doxygen/: footer.html  header.html  libpaxos-cpp.doxy
contrib/doxygen/html/: _2home_2lmergen_2git_2libpaxos-cpp_2paxos_09_09_2server_8hpp-example.html  adapter_8cpp.html  adapter_8cpp__incl.map  adapter_8cpp__incl.md5  adapter_8cpp_source.html  adapter_8hpp.html  adapter_8hpp__dep__incl.map  adapter_8hpp__dep__incl.md5  adapter_8hpp__incl.map  adapter_8hpp__incl.md5  adapter_8hpp_source.html  annotated.html  announce__leadership_8cpp.html  announce__leadership_8cpp__incl.map  announce__leadership_8cpp__incl.md5  announce__leadership_8cpp_source.html  announce__leadership_8hpp.html  announce__leadership_8hpp__dep__incl.map  announce__leadership_8hpp__dep__incl.md5  announce__leadership_8hpp__incl.map  announce__leadership_8hpp__incl.md5  announce__leadership_8hpp_source.html  basic__paxos_8cpp_source.html  basic__paxos_8hpp_source.html  classes.html  classpaxos_1_1client-members.html  classpaxos_1_1client.html  classpaxos_1_1configuration-members.html  classpaxos_1_1configuration.html  classpaxos_1_1detail_1_1client_1_1protocol_1_1initiate__request-members.html  classpaxos_1_1detail_1_1client_1_1protocol_1_1initiate__request.html  classpaxos_1_1detail_1_1command-members.html  classpaxos_1_1detail_1_1command.html  classpaxos_1_1detail_1_1connection__pool-members.html  classpaxos_1_1detail_1_1connection__pool.html  classpaxos_1_1detail_1_1dispatcher-members.html  classpaxos_1_1detail_1_1dispatcher.html  classpaxos_1_1detail_1_1parser-members.html  classpaxos_1_1detail_1_1parser.html  classpaxos_1_1detail_1_1paxos__state-members.html  (+431 more)
contrib/doxygen/html/search/: all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6b.html  all_6e.js  all_70.js  all_71.js  all_72.js  all_73.js  all_74.js  all_75.html  all_7e.js  classes_61.js  classes_62.js  classes_63.js  classes_64.js  classes_65.js  classes_68.js  classes_69.js  classes_6c.js  classes_6e.js  classes_70.js  classes_71.js  classes_72.js  classes_73.js  classes_74.js  defines_64.html  defines_69.html  defines_70.js  enums_63.html  enums_65.js  enums_73.js  enums_74.js  enumvalues_65.js  (+47 more)
doc/: Jamroot  boostbook.css  build.sh  doxy2qbk.pl  eventual_consistency.qbk  getting_started.qbk  getting_the_source.qbk  index.html  installation.qbk  libpaxos-cpp.qbk  quickref.xml  reference.dox  reference.xsl  requirements.qbk  revision_history.qbk  support.qbk  tutorial.qbk  what_s_new.qbk
doc/qbk/: Jamroot  acknowledgements.qbk  build.sh  getting_the_source.qbk  index.html  installation.qbk  introduction.qbk  libpaxos-cpp.qbk  quickref.xml  reference.qbk  reference.xsl  what_s_new.qbk
doc/tutorial/: basic_client.qbk  basic_lock_service_client.qbk  basic_lock_service_server.qbk  basic_server.qbk  durable_lock_service_server.qbk
examples/: Makefile.am
examples/introduction_1/: Makefile.am  client.cpp  server.cpp
examples/lock_service_1/: Makefile.am  client.cpp  server.cpp
examples/lock_service_2/: Makefile.am  client  datastore.cpp  datastore.hpp  locks.sqlite  server  server.cpp
paxos++/: Makefile.am  client.cpp  client.hpp  configuration.cpp  configuration.hpp  error.cpp  error.hpp  exception.hpp  local_server.cpp  local_server.hpp  paxos.cpp  paxos.hpp  quorum.cpp  quorum.hpp  quorum.inl  server.cpp  server.hpp
paxos++/detail/: Makefile.am  command.cpp  command.hpp  command.inl  command_dispatcher.cpp  command_dispatcher.hpp  connection_pool.cpp  connection_pool.hpp  debug.hpp  dispatcher.cpp  dispatcher.hpp  error.cpp  error.hpp  io_thread.cpp  io_thread.hpp  parser.cpp  parser.hpp  paxos_context.cpp  paxos_context.hpp  paxos_context.inl  paxos_request.hpp  paxos_request_queue.cpp  paxos_request_queue.hpp  paxos_request_queue.inl  paxos_state.hpp  paxos_state.inl  protocol.cpp  protocol.hpp  quorum.cpp  quorum.hpp  quorum.inl  remote_server.cpp  remote_server.hpp  tcp_connection.cpp  tcp_connection.hpp  tcp_connection_fwd.hpp
paxos++/detail/client/protocol/: initiate_request.cpp  initiate_request.hpp  request.hpp
paxos++/detail/connection/: pool.cpp  pool.hpp  scoped_connection.cpp  scoped_connection.hpp  tcp_connection.cpp  tcp_connection.hpp
paxos++/detail/protocol/: Makefile.am  announce_leadership.cpp  announce_leadership.hpp  basic_paxos.cpp  basic_paxos.hpp  command.cpp  command.hpp  command.inl  elect_leader.cpp  elect_leader.hpp  handshake.cpp  handshake.hpp  protocol.cpp  protocol.hpp  protocol.inl  session.hpp  session.inl
paxos++/detail/protocol/pb/: adapter.cpp  adapter.hpp  command.pb.cc  command.pb.h  command.proto
paxos++/detail/quorum/: client_view.cpp  client_view.hpp  quorum.cpp  quorum.hpp  server.cpp  server.hpp  server_view.cpp  server_view.hpp  server_view.inl  view.cpp  view.hpp
paxos++/detail/quorum/protocol/: announce_leadership.cpp  announce_leadership.hpp  establish_connection.cpp  establish_connection.hpp  handshake.cpp  handshake.hpp
paxos++/detail/request_queue/: queue.cpp  queue.hpp  queue.inl
paxos++/detail/strategies/basic_paxos/protocol/: request.cpp  request.hpp
paxos++/detail/strategy/: factory.hpp  factory.inl  request.hpp  strategy.hpp  strategy.inl
paxos++/detail/strategy/basic_paxos/: factory.cpp  factory.hpp
paxos++/detail/strategy/basic_paxos/protocol/: strategy.cpp  strategy.hpp
paxos++/detail/util/: conversion.hpp  conversion.inl  debug.hpp  debug_log_default.hpp  debug_log_log4cxx.hpp  debug_log_log4cxx.inl  singleton.hpp  singleton.inl
paxos++/durable/: heap.cpp  heap.hpp  sqlite.cpp  sqlite.hpp  storage.cpp  storage.hpp
paxos++/exception/: exception.hpp
test/: Makefile.am  basic1.cpp  basic2.cpp  basic3.cpp  basic4.cpp  basic5.cpp  connection_close1.cpp  connection_close2.cpp  durability1.cpp  durability2.cpp  durability3.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp
test/test1/: main.cpp
