include_HEADERS = \
	protocol.hpp \
	handshake.hpp \
	elect_leader.hpp \
	announce_leadership.hpp \
	command.hpp \
	command.inl 

noinst_LTLIBRARIES=libpaxos_detail_protocol.la
libpaxos_detail_protocol_la_SOURCES = \
	protocol.cpp \
	handshake.cpp \
	elect_leader.cpp \
	announce_leadership.cpp \
	command.cpp 
